# ime-jd

./: APPSTORE-EXCEPTION.md  README.md
.github/workflows/: build-on-push.yml  release.yml  test-on-push.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/scripts/: build-libjd.sh
assets/icon/: README.md  compose.py  generate.sh  icontool.swift
bindings/javascript/: README.md  package.json  tsconfig.json
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: lib.rs
bindings/rust/tests/: engine.rs
bindings/swift/: Engine.swift  KeyAction.swift  QuerySnapshot.swift  README.md
cli/: Cargo.toml  Cross.toml  build.rs
cli/src/: core.rs  debug_mode.rs  main.rs  renderer.rs
cli/tests/: core_smoke.rs
core/: README.md  build.zig  build.zig.zon  jd.h
core/docs/: integration.md
core/include/: jd.h  module.modulemap
core/scripts/: gen_punc.zig  gen_trie.zig
core/src/: blob_format.zig  main.zig  pagination.zig  punc.zig  punc_format.zig  punctuation_marks.zig  query.zig  tables.zig  tail_linked_list.zig  tests.zig  trie.zig  trie_test_data.zig
ios/: .gitignore  README.md  project.yml
ios/App/: AppDelegate.swift  Info.plist  KeyboardPreviewViewController.swift  LaunchScreen.storyboard  RootViewController.swift
ios/Keyboard/: Info.plist  KeyboardViewController.swift
ios/KeyboardTests/: InputSessionTests.swift  KeyboardThemeTests.swift
ios/KeyboardUITests/: KeyboardExtensionQA.swift
ios/docs/: keyboard-switch-height-jitter.md
ios/fastlane/: Appfile  Fastfile
ios/scripts/: build-libjd.sh  screenshots.sh
macos/: .gitignore  README.md  project.yml
macos/JdIME/: Info.plist  JdIME-Bridging-Header.h  jd-menu.tiff  jd.icns
macos/JdIMETests/: CandidateFormatterTests.swift  EngineSmokeTests.swift  KeyGateTests.swift
windows/: Cargo.toml  README.md  app.manifest  build.rs  jd_ime.rc  register.bat  unregister.bat
windows/src/: candidate_window.rs  composition.rs  display_attribute.rs  edit_session.rs  factory.rs  guids.rs  jd.rs  lib.rs  registration.rs  tip.rs  ui_element.rs
windows/tests/: engine.rs
(+88 files in other folders)
