[package]
name = "jd-cli"
# Placeholder. The real project version lives in core/build.zig.zon; this
# 0.0.0 is intentionally not a real version.
version = "0.0.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
crossterm = "0.29"
unicode-width = "0.2"
jd = { path = "../bindings/rust" }
