[package]
name = "jd-windows"
# Placeholder. The real project version lives in core/build.zig.zon; this
# 0.0.0 is intentionally not a real version.
version = "0.0.0"
edition = "2024"

[lib]
name = "ime_jd"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
embed-resource = "3"

[dependencies]
# The `#[implement]` macro expands to code that references `windows_core` by
# name, so we keep it as a direct dependency even though `windows::core` is
# a re-export of the same crate.
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_HiDpi",
    "Win32_UI_TextServices",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
